# embedl-Develop_AI_for_any_Edge_Application

./: .gitignore  README.md  pyproject.toml  ruff.toml
1_describing_a_cars_license_plate/: download_images_and_videos.py
1_describing_a_cars_license_plate/backend_embedl/: .env.example  README.md  run.sh
1_describing_a_cars_license_plate/backend_embedl/app/: __init__.py  config.py  main.py
1_describing_a_cars_license_plate/backend_embedl/app/api/routes/: analysis.py  health.py
1_describing_a_cars_license_plate/backend_embedl/app/core/: analyzer.py  model.py  prompts.py
1_describing_a_cars_license_plate/backend_embedl/app/schemas/: analysis.py
1_describing_a_cars_license_plate/backend_embedl/app/services/: file_handler.py  job_manager.py
1_describing_a_cars_license_plate/backend_embedl/app/utils/: logs_setting.py  memory.py
1_describing_a_cars_license_plate/backend_embedl/scripts/: download_images_and_videos.py
1_describing_a_cars_license_plate/frontend_embedl/src/components/ui/: alert.tsx
2_enterprise_security_system/: .env.example  config.py  log_setup.py
