[project]
name = "project-with-embedl"
version = "0.1.0"
description = "Aqui vamos usar os modelos de embedl"
readme = "README.md"
authors = [
    { name = "EddyGiusepe", email = "eddychirinos.unac@gmail.com" }
]
requires-python = ">=3.13.7, <3.14"
dependencies = [
    "accelerate>=1.14.0",
    "compressed-tensors>=0.17.1",
    "ddgs>=9.14.4",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.20",
    "torch>=2.12.1",
    "torchcodec>=0.11",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.32.0",
    "yt-dlp==2026.6.9",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.18",
]
